--- a/app/components/header.html
+++ b/app/components/header.html
@@ -47,188 +47,188 @@
 
 <body>
   <div class="wrapper">
-    <header class="header">
+    <header class="header" id="header">
+      <div class="header__inner">
+        <div class="topbar">
+          <div class="container">
+            <div class="topbar__inner">
+              <h6 class="menu-2">Будние дни с 8 до 21 часа. Выходные с 10 до 18 часов</h6>
 
-      <div class="topbar">
-        <div class="container">
-          <div class="topbar__inner">
-            <h6 class="menu-2">Будние дни с 8 до 21 часа. Выходные с 10 до 18 часов</h6>
-
-            <div class="topbar__item">
-              <a class="topbar__link menu-2" href="mailto:info@dsk-vira.ru">info@dsk-vira.ru</a>
-              <h6 class="menu-2">Москва, 2-й Котельнический переулок 3</h6>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="head">
-        <div class="container">
-          <div class="head__inner">
-            <div class="head__logo">
-              <a class="head__logo-link" href="#!">
-                <img class="head__logo-img" src="images/logo.svg" alt="logo">
-              </a>
-              <div class="head__logo-item">
-                <h4 class="head__logo-title">Экологичные</h4>
-                <h6 class="menu-1">каркасные дома в Москве и МО</h6>
-              </div>
-            </div>
-
-            <div class="head__item">
-              <span class="small">от</span>
-              <span class="num">48</span>
-              <span class="menu-1">дней</span>
-              <span class="small">до новоселья</span>
-            </div>
-
-            <button class="burger" id="burger">
-              <h6 class="menu-2">Меню</h6>
-              <span></span>
-            </button>
-
-            <div class="head__social">
-              <a class="head__social-link" href="viber://chat?number=89165562526">
-                <img class="head__social-img" src="images/Viber.svg" alt="viber">
-              </a>
-              <a class="head__social-link" href="https://wa.me/89165562526">
-                <img class="head__social-img" src="images/whatsapp.svg" alt="whatsapp">
-              </a>
-              <a class="head__social-link" href="https://t.me/89165562526">
-                <img class="head__social-img" src="images/telegram.svg" alt="telegram">
-              </a>
-            </div>
-            <div class="head__info">
-              <div class="head__info-item">
-                <a class="head__info-link" href="tel:89165562526">
-                  <h4>+7 (916) 556 25 26</h4>
-                </a>
-                <h6 class="menu-2">Звоните с 9 до 18 часов</h6>
-              </div>
-              <div class="head__info-item">
-                <button class="btn-green menu-1" type="button">
-                  Заказать звонок
-                </button>
+              <div class="topbar__item">
+                <a class="topbar__link menu-2" href="mailto:info@dsk-vira.ru">info@dsk-vira.ru</a>
+                <h6 class="menu-2">Москва, 2-й Котельнический переулок 3</h6>
               </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <div id="menu" class="menu">
-        <div class="container">
-          <div class="menu__inner">
-            <ul class="menu__list">
-              <li class="menu__item">
-                <a href="#!" class="menu__link menu-1">Проекты</a>
-              </li>
-              <li class="menu__item">
-                <a href="#!" class="menu__link menu__dropdown menu-1">Услуги
-                  <svg class="menu__arrow">
-                    <use xlink:href="#menu-arrow"></use>
-                  </svg>
+        <div class="head">
+          <div class="container">
+            <div class="head__inner">
+              <div class="head__logo">
+                <a class="head__logo-link" href="#!">
+                  <img class="head__logo-img" src="images/logo.svg" alt="logo">
                 </a>
-                <ul class="menu__items">
-                  <li class="menu__items-item">
-                    <a href="#!" class="menu__items-link menu-1">Индивидуальное проектирование</a>
-                  </li>
-                  <li class="menu__items-item">
-                    <a href="#!" class="menu__items-link menu-1">Технический надзор</a>
-                  </li>
-                  <li class="menu__items-item">
-                    <a href="#!" class="menu__items-link menu-1">Барбекю, бани, беседки, забор из дерева</a>
-                  </li>
-                  <li class="menu__items-item">
-                    <a href="#!" class="menu__items-link menu-1">Строительство</a>
-                  </li>
-                </ul>
-              </li>
-              <li class="menu__item">
-                <a href="#!" class="menu__link menu-1">Наши работы</a>
-              </li>
-              <li class="menu__item">
-                <a href="#!" class="menu__link menu__dropdown menu-1">О компании
-                  <svg class="menu__arrow">
-                    <use xlink:href="#menu-arrow"></use>
-                  </svg>
+                <div class="head__logo-item">
+                  <h4 class="head__logo-title">Экологичные</h4>
+                  <h6 class="menu-1">каркасные дома в Москве и МО</h6>
+                </div>
+              </div>
+
+              <div class="head__item">
+                <span class="small">от</span>
+                <span class="num">48</span>
+                <span class="menu-1">дней</span>
+                <span class="small">до новоселья</span>
+              </div>
+
+              <button class="burger" id="burger">
+                <h6 class="menu-2">Меню</h6>
+                <span></span>
+              </button>
+
+              <div class="head__social">
+                <a class="head__social-link" href="viber://chat?number=89165562526">
+                  <img class="head__social-img" src="images/Viber.svg" alt="viber">
                 </a>
-                <ul class="menu__items">
-                  <li class="menu__items-item">
-                    <a href="#!" class="menu__items-link menu-1">О нас</a>
-                  </li>
-                  <li class="menu__items-item">
-                    <a href="#!" class="menu__items-link menu-1">Вакансии</a>
-                  </li>
-                  <li class="menu__items-item">
-                    <a href="#!" class="menu__items-link menu-1">Клиентский сервис и гарантии</a>
-                  </li>
-                  <li class="menu__items-item">
-                    <a href="#!" class="menu__items-link menu-1">Партнёры</a>
-                  </li>
-                  <li class="menu__items-item">
-                    <a href="#!" class="menu__items-link menu-1">Документы</a>
-                  </li>
-                  <li class="menu__items-item">
-                    <a href="#!" class="menu__items-link menu-1">Способы оплаты</a>
-                  </li>
-                  <li class="menu__items-item">
-                    <a href="#!" class="menu__items-link menu-1">Отзывы</a>
-                  </li>
-                </ul>
-              </li>
-              <li class="menu__item">
-                <a href="#!" class="menu__link menu-1">Вопрос-ответ</a>
-              </li>
-              <li class="menu__item">
-                <a href="#!" class="menu__link menu-1">Контакты</a>
-              </li>
-              <li class="menu__item">
-                <form class="menu__search" action="#">
-                  <input class="menu__search-input menu-1" type="search" autofocus tabindex="1">
-                  <label class="menu__search-label">
-                    <img class="menu__img" src="images/search.svg" alt="search">
-                    <input class="menu__link menu-1" type="submit" value="Поиск">
-                  </label>
-                </form>
-              </li>
-              <li class="menu__item">
-                <a href="#!" class="menu__link menu-1">
-                  <img class="menu__img" src="images/unlock.svg" alt="unlock">
-                  Личный кабинет
+                <a class="head__social-link" href="https://wa.me/89165562526">
+                  <img class="head__social-img" src="images/whatsapp.svg" alt="whatsapp">
                 </a>
-              </li>
-            </ul>
+                <a class="head__social-link" href="https://t.me/89165562526">
+                  <img class="head__social-img" src="images/telegram.svg" alt="telegram">
+                </a>
+              </div>
+              <div class="head__info">
+                <div class="head__info-item">
+                  <a class="head__info-link" href="tel:89165562526">
+                    <h4>+7 (916) 556 25 26</h4>
+                  </a>
+                  <h6 class="menu-2">Звоните с 9 до 18 часов</h6>
+                </div>
+                <div class="head__info-item">
+                  <button class="btn-green menu-1" type="button">
+                    Заказать звонок
+                  </button>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="bottombar">
-        <div class="container">
-          <div class="bottombar__inner">
-            <button class="btn-green menu-1" type="button">
-              Заказать звонок
-            </button>
-            <div class="head__social">
-              <a class="head__social-link" href="viber://chat?number=89165562526">
-                <img class="head__social-img" src="images/Viber.svg" alt="viber">
-              </a>
-              <a class="head__social-link" href="https://wa.me/89165562526">
-                <img class="head__social-img" src="images/whatsapp.svg" alt="whatsapp">
-              </a>
-              <a class="head__social-link" href="https://t.me/89165562526">
-                <img class="head__social-img" src="images/telegram.svg" alt="telegram">
-              </a>
+        <div id="menu" class="menu">
+          <div class="container">
+            <div class="menu__inner">
+              <ul class="menu__list">
+                <li class="menu__item">
+                  <a href="#!" class="menu__link menu-1">Проекты</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#!" class="menu__link menu__dropdown menu-1">Услуги
+                    <svg class="menu__arrow">
+                      <use xlink:href="#menu-arrow"></use>
+                    </svg>
+                  </a>
+                  <ul class="menu__items">
+                    <li class="menu__items-item">
+                      <a href="#!" class="menu__items-link menu-1">Индивидуальное проектирование</a>
+                    </li>
+                    <li class="menu__items-item">
+                      <a href="#!" class="menu__items-link menu-1">Технический надзор</a>
+                    </li>
+                    <li class="menu__items-item">
+                      <a href="#!" class="menu__items-link menu-1">Барбекю, бани, беседки, забор из дерева</a>
+                    </li>
+                    <li class="menu__items-item">
+                      <a href="#!" class="menu__items-link menu-1">Строительство</a>
+                    </li>
+                  </ul>
+                </li>
+                <li class="menu__item">
+                  <a href="#!" class="menu__link menu-1">Наши работы</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#!" class="menu__link menu__dropdown menu-1">О компании
+                    <svg class="menu__arrow">
+                      <use xlink:href="#menu-arrow"></use>
+                    </svg>
+                  </a>
+                  <ul class="menu__items">
+                    <li class="menu__items-item">
+                      <a href="#!" class="menu__items-link menu-1">О нас</a>
+                    </li>
+                    <li class="menu__items-item">
+                      <a href="#!" class="menu__items-link menu-1">Вакансии</a>
+                    </li>
+                    <li class="menu__items-item">
+                      <a href="#!" class="menu__items-link menu-1">Клиентский сервис и гарантии</a>
+                    </li>
+                    <li class="menu__items-item">
+                      <a href="#!" class="menu__items-link menu-1">Партнёры</a>
+                    </li>
+                    <li class="menu__items-item">
+                      <a href="#!" class="menu__items-link menu-1">Документы</a>
+                    </li>
+                    <li class="menu__items-item">
+                      <a href="#!" class="menu__items-link menu-1">Способы оплаты</a>
+                    </li>
+                    <li class="menu__items-item">
+                      <a href="#!" class="menu__items-link menu-1">Отзывы</a>
+                    </li>
+                  </ul>
+                </li>
+                <li class="menu__item">
+                  <a href="#!" class="menu__link menu-1">Вопрос-ответ</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#!" class="menu__link menu-1">Контакты</a>
+                </li>
+                <li class="menu__item">
+                  <form class="menu__search" action="#">
+                    <input class="menu__search-input menu-1" type="search" autofocus tabindex="1">
+                    <label class="menu__search-label">
+                      <img class="menu__img" src="images/search.svg" alt="search">
+                      <input class="menu__link menu-1" type="submit" value="Поиск">
+                    </label>
+                  </form>
+                </li>
+                <li class="menu__item">
+                  <a href="#!" class="menu__link menu-1">
+                    <img class="menu__img" src="images/unlock.svg" alt="unlock">
+                    Личный кабинет
+                  </a>
+                </li>
+              </ul>
             </div>
-            <div class="head__info">
-              <div class="head__info-item">
-                <a class="head__info-link" href="tel:89165562526">
-                  <h4>+7 (916) 556 25 26</h4>
+          </div>
+        </div>
+
+        <div class="bottombar">
+          <div class="container">
+            <div class="bottombar__inner">
+              <button class="btn-green menu-1" type="button">
+                Заказать звонок
+              </button>
+              <div class="head__social">
+                <a class="head__social-link" href="viber://chat?number=89165562526">
+                  <img class="head__social-img" src="images/Viber.svg" alt="viber">
                 </a>
-                <h6 class="menu-2">Звоните с 9 до 18 часов</h6>
+                <a class="head__social-link" href="https://wa.me/89165562526">
+                  <img class="head__social-img" src="images/whatsapp.svg" alt="whatsapp">
+                </a>
+                <a class="head__social-link" href="https://t.me/89165562526">
+                  <img class="head__social-img" src="images/telegram.svg" alt="telegram">
+                </a>
+              </div>
+              <div class="head__info">
+                <div class="head__info-item">
+                  <a class="head__info-link" href="tel:89165562526">
+                    <h4>+7 (916) 556 25 26</h4>
+                  </a>
+                  <h6 class="menu-2">Звоните с 9 до 18 часов</h6>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-
     </header>
