--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,5 +1,3 @@
-@media (max-width: 1200px) {}
-
 @media (max-width: 1024px) {
   h1 {
     font-size: 36px;
@@ -128,16 +126,6 @@
     display: none;
   }
 
-  .hero__inner {
-    min-height: 440px;
-    filter: unset;
-    background-position: center right;
-    margin-left: -18px;
-    margin-right: -18px;
-    width: calc(100% + 36px);
-    border-radius: 0;
-  }
-
   .menu__list::before {
     content: "";
     display: block;
@@ -147,10 +135,37 @@
     order: 6;
   }
 
+  .hero .container-fluid {
+    border-radius: 0;
+  }
+
+  .hero__inner {
+    min-height: 440px;
+    filter: unset;
+    background-position: center right;
+    width: 100%;
+    padding: 0 15px;
+  }
+
   .hero__content {
     background: var(--white, #fff);
     max-width: 460px;
     padding: 0 20px 20px;
+    border-radius: 0 0 20px 20px;
+  }
+
+  .hero__content::before {
+    width: 20px;
+    height: 20px;
+    background: radial-gradient(circle at left bottom, transparent 20px, var(--white, #fff) 20px);
+    left: -20px;
+  }
+
+  .hero__content::after {
+    width: 20px;
+    height: 20px;
+    background: radial-gradient(circle at right bottom, transparent 20px, var(--white, #fff) 20px);
+    right: -20px;
   }
 
   .case__tab-item {
@@ -351,6 +366,7 @@
     top: 20px;
     right: 20px;
     padding: 20px;
+    border-radius: 20px;
   }
 
   .projects__options-list {
@@ -400,6 +416,8 @@
   .payment .decor {
     height: 80px;
     top: -80px;
+    width: 100%;
+    left: -33%;
   }
 
   .payment__item-img {
@@ -669,6 +687,12 @@
   }
 }
 
+@media (max-width: 970px) {
+  .hero__content {
+    margin-left: -20px;
+  }
+}
+
 @media (max-width: 900px) {
   .head__inner {
     gap: 10px;
@@ -723,6 +747,23 @@
 
   .footer__menu {
     padding: 0;
+  }
+}
+
+@media (max-width: 850px) {
+  .payment__slider {
+    margin-bottom: 0;
+  }
+
+  .payment__slider .slick-list {
+    margin-bottom: 95px;
+  }
+
+  .payment__inner [class*=" btn-"],
+  .payment__inner [class^=btn-] {
+    height: 45px;
+    position: absolute;
+    bottom: 108px;
   }
 }
 
@@ -831,7 +872,8 @@
   }
 
   .projects__options {
-    padding: 10px 15px;
+    padding: 0;
+    max-width: 320px;
   }
 
   .projects__options-item {
@@ -867,6 +909,15 @@
   .projects__options-list {
     flex-wrap: wrap;
     gap: 10px;
+    padding: 10px 15px;
+  }
+
+  .projects__options-list.show {
+    padding: 10px 70px 10px 10px;
+  }
+
+  .projects__slider .slick-list {
+    margin-bottom: 30px;
   }
 
   .footer__top-list,
@@ -1022,6 +1073,30 @@
     right: -10px;
     top: unset;
     bottom: -10px;
+  }
+
+  .payment__head {
+    margin-bottom: 20px;
+  }
+
+  .payment__item-img {
+    width: 40px;
+    height: 40px;
+  }
+
+  .payment__list {
+    gap: 12px;
+    margin-bottom: 20px;
+  }
+
+  .payment {
+    margin-top: 120px;
+    padding: 0 0 60px 0;
+  }
+
+  .payment .decor {
+    height: 60px;
+    top: -60px;
   }
 
   // sitemap
@@ -1288,16 +1363,21 @@
     font-size: 20px;
   }
 
+  .hero .container-fluid {
+    border-radius: 20px;
+  }
+
   .hero__inner {
-    padding: 0 30px;
+    padding: 0 15px;
     margin: 0;
     width: 100%;
-    border-radius: 20px;
     background-position: center;
   }
 
   .hero__content {
     padding: 0 30px 30px;
+    margin-left: -30px;
+    max-width: 420px;
   }
 
   .discount {
@@ -1346,6 +1426,14 @@
     max-width: 390px;
   }
 
+  .hero__inner {
+    max-width: 390px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  .hero__content {}
+
   .advantages__img {
     width: 420px;
     margin: 0 0 0 calc(100% - 420px);
@@ -1358,4 +1446,25 @@
   }
 }
 
-@media (max-width: 360px) {}
+@media (max-width: 360px) {
+
+  .head__info-link h4 {
+    font-size: 16px;
+  }
+
+  .bottombar__inner {
+    gap: 15px;
+  }
+
+  .header.active .bottombar .head__info-link h4 {
+    font-size: 18px;
+  }
+
+  .projects__options {
+    left: 20px;
+  }
+
+  .projects__options-list.show {
+    padding: 10px 30px 10px 10px;
+  }
+}
