--- a/app/scss/pages/index.scss
+++ b/app/scss/pages/index.scss
@@ -1004,7 +1004,7 @@
 }
 
 .payment {
-  margin-top: 200px;
+  margin-top: 100px;
   padding: 0 0 100px;
   background: var(--bg, #F9F9F9);
   position: relative;
@@ -1033,6 +1033,10 @@
 
     .slick-list {
       overflow: visible;
+    }
+
+    .slick-dots li {
+      width: 62.5px;
     }
 
     &-item {
@@ -1065,11 +1069,9 @@
 
   &__inner {
     position: relative;
-    margin: 100px 0;
-    height: 830px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    gap: 160px;
   }
 
   &__content {}
@@ -1080,19 +1082,25 @@
     gap: 10px;
     margin-bottom: 40px;
     max-width: 470px;
+    width: 100%;
   }
 
   &__items {
     display: flex;
     flex-direction: column;
     gap: 30px;
-    max-width: 200px;
+    max-width: 270px;
   }
 
   &__item {
     display: flex;
     flex-direction: column;
     gap: 5px;
+    max-width: 123px;
+
+    &:first-child {
+      max-width: 100%;
+    }
   }
 
   &__img {
@@ -1113,18 +1121,33 @@
 
     &-value {
       color: var(--green, #2BAC74);
+      width: fit-content;
     }
 
     &-text {
+      position: relative;
       margin-bottom: 10px;
-
-      span {
-        color: var(--red, F#D43E3E);
-      }
+      width: fit-content;
 
       &:last-child {
         color: var(--grey, #A7A7A7);
         margin-bottom: 0;
+      }
+
+      &.first::after {
+        content: "*";
+        position: absolute;
+        top: 0;
+        right: -8px;
+        color: var(--red, F#D43E3E);
+      }
+
+      &.second::before {
+        content: "*";
+        position: absolute;
+        top: 0;
+        left: -8px;
+        color: var(--red, F#D43E3E);
       }
     }
   }
@@ -1133,8 +1156,7 @@
 .blog {
   background: var(--black, #2E2D2D);
   position: relative;
-  max-height: 750px;
-  margin: 200px 0 162px;
+  margin: 100px 0 162px;
 
   .decor {
     position: absolute;
@@ -1144,7 +1166,9 @@
     height: 100px;
   }
 
-  &__inner {}
+  &__inner {
+    margin-bottom: -62px;
+  }
 
   &__head {
     display: flex;
@@ -1162,8 +1186,18 @@
     color: var(--grey, #A7A7A7);
   }
 
-  &__content {
+  &__body {
     display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+  }
+
+  &__slider {
+    max-width: 800px;
+
+    .slick-dots button {
+      width: 100%;
+    }
   }
 
   &__video {
@@ -1177,7 +1211,6 @@
       max-width: 770px;
       width: 100%;
       max-height: 470px;
-      margin-right: 30px;
       border-radius: 30px;
       overflow: hidden;
     }
@@ -1209,21 +1242,32 @@
   }
 
   &__list {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
     max-width: 370px;
     width: 100%;
-    padding: 40px;
-    margin-top: auto;
-    border-radius: 30px 30px 30px 0;
-    background: var(--bg, #F9F9F9);
+
+    .slick-list {
+      padding: 0 !important;
+    }
+
+    .slick-track {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      max-width: 370px;
+      width: 100% !important;
+      padding: 40px;
+      margin-top: auto;
+      border-radius: 30px 30px 30px 0;
+      background: var(--bg, #F9F9F9);
+      transform: translate3D(0px, 0px, 0px) !important;
+    }
   }
 
   &__item {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    min-width: 100%;
 
     &:not(:last-child) {
       padding-bottom: 20px;
