--- a/app/css/style.css
+++ b/app/css/style.css
@@ -460,7 +460,7 @@ p {
 }
 .slick-dots button {
   width: 100%;
-  min-width: 67.2px;
+  min-width: 62.5px;
   height: 12px;
   border-radius: 5px;
   font-size: 0;
@@ -933,17 +933,25 @@ p {
   object-fit: cover;
 }
 
-.hero .container-fluid {
-  background-position: center right;
-  background-repeat: no-repeat;
-  background-size: cover;
+.hero .container {
+  position: relative;
+}
+.hero__bg {
+  display: block;
+  width: 100%;
+  height: 570px;
   border-radius: 30px;
+  overflow: hidden;
+}
+.hero__bg-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .hero__inner {
-  padding: 0 60px;
-  width: 100%;
-  height: auto;
-  min-height: 570px;
+  max-width: 1350px;
+  width: 1350px;
+  margin: 0 -75px;
 }
 .hero__content {
   display: flex;
@@ -953,7 +961,9 @@ p {
   max-width: 630px;
   padding: 0 30px 30px;
   border-radius: 0 0 30px 30px;
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: -15px;
 }
 .hero__content::before {
   content: "";
@@ -1234,10 +1244,12 @@ p {
 .calculation__desc-item {
   display: flex;
   justify-content: space-between;
+  gap: 10px;
   color: var(--grey, #A7A7A7);
 }
 .calculation__desc-value {
   color: var(--white, #fff);
+  text-align: right;
 }
 .calculation__gift {
   display: flex;
@@ -1464,20 +1476,20 @@ p {
 .stages__slider-item:last-child .stages__item-line {
   display: none;
 }
+.stages__slider-item.slick-current .stages__item-title {
+  color: var(--green, #03844C);
+  transition: all 0.2s ease-out;
+}
+.stages__slider-item.slick-current .stages__item::before {
+  border-color: var(--white, #fff);
+  background: var(--brown, #857067);
+  transition: all 0.2s ease-out;
+}
 .stages__item {
   display: flex;
   flex-direction: column;
   position: relative;
   width: calc(100% - 30px);
-}
-.stages__item:hover .stages__item-title {
-  color: var(--green, #03844C);
-  transition: all 0.2s ease-out;
-}
-.stages__item:hover::before {
-  border-color: var(--white, #fff);
-  background: var(--brown, #857067);
-  transition: all 0.2s ease-out;
 }
 .stages__item::before {
   content: "";
@@ -1858,11 +1870,14 @@ p {
 .map__img {
   max-width: 970px;
   width: 83%;
-  height: auto;
-  object-fit: cover;
   position: absolute;
   top: 0;
   right: 0;
+}
+.map__img img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 .map__rec {
   display: flex;
@@ -3181,21 +3196,20 @@ p {
     background: #D9D9D9;
     order: 6;
   }
-  .hero .container-fluid {
+  .hero__inner {
+    max-width: 1060px;
+    width: 1060px;
+    margin: 0 -60px;
+  }
+  .hero__bg {
+    height: 440px;
     border-radius: 0;
   }
-  .hero__inner {
-    min-height: 440px;
-    filter: unset;
-    background-position: center right;
-    width: 100%;
-    padding: 0 15px;
-  }
   .hero__content {
-    background: var(--white, #fff);
     max-width: 460px;
     padding: 0 20px 20px;
     border-radius: 0 0 20px 20px;
+    left: -5px;
   }
   .hero__content::before {
     width: 20px;
@@ -3665,9 +3679,6 @@ p {
   }
 }
 @media (max-width: 970px) {
-  .hero__content {
-    margin-left: -20px;
-  }
   .map__img {
     top: 12%;
     width: 80%;
@@ -3776,6 +3787,18 @@ p {
   .menu.active .menu__item:last-child {
     width: 30%;
   }
+  .hero__inner {
+    max-width: calc(100% + 30px);
+    width: calc(100% + 30px);
+    margin: 0 -15px;
+  }
+  .hero__bg {
+    border-radius: 20px;
+  }
+  .hero__content {
+    padding: 0 30px 30px;
+    left: -15px;
+  }
   .calculation {
     margin-bottom: 310px;
   }
@@ -3794,6 +3817,9 @@ p {
   .calculation__content {
     width: 100%;
     border-radius: 20px;
+  }
+  .calculation__tab {
+    gap: 5px;
   }
   .advantages__block {
     flex-direction: column;
@@ -4074,11 +4100,15 @@ p {
   .sitemap__block:last-child {
     width: calc(66% - 7.66px);
   }
+  .services__item,
   .construction__item {
-    width: calc(50% - 10px);
+    width: 100%;
   }
   .services__item {
     margin-right: 12px;
+  }
+  .construction__item {
+    width: calc(50% - 10px);
   }
   .works__item {
     width: 100%;
@@ -4136,6 +4166,12 @@ p {
   }
   .head__inner.active {
     justify-content: space-between;
+  }
+  .header__inner {
+    gap: 0;
+  }
+  .header__inner.active {
+    gap: 20px;
   }
   .menu {
     position: relative;
@@ -4268,20 +4304,6 @@ p {
   .header.active .bottombar .head__info-link h4 {
     font-size: 20px;
   }
-  .hero .container-fluid {
-    border-radius: 20px;
-  }
-  .hero__inner {
-    padding: 0 15px;
-    margin: 0;
-    width: 100%;
-    background-position: center;
-  }
-  .hero__content {
-    padding: 0 30px 30px;
-    margin-left: -30px;
-    max-width: 420px;
-  }
   .discount {
     height: calc(100% - 43px);
   }
@@ -4308,19 +4330,31 @@ p {
   .sitemap__block:last-child {
     width: 100%;
   }
-  .services__item,
-  .construction__item {
-    width: 100%;
-  }
 }
 @media (max-width: 480px) {
   .container {
     max-width: 390px;
   }
+  .hero {
+    position: relative;
+    height: 440px;
+  }
+  .hero .container {
+    position: unset;
+  }
+  .hero__bg {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+  }
   .hero__inner {
-    max-width: 390px;
-    width: 100%;
-    margin: 0 auto;
+    max-width: calc(100% + 60px);
+    width: calc(100% + 60px);
+  }
+  .hero__content {
+    position: relative;
   }
   .advantages__img {
     width: 420px;
