fix block & path icons

--- a/app/components/header.html
+++ b/app/components/header.html
@@ -31,7 +31,7 @@
 
     input[type=range]::-webkit-slider-thumb {
       background-color: var(--black, #2E2D2D);
-      background-image: url(../../images/icons/thumb.svg);
+      background-image: url(images/icons/thumb.svg);
       background-repeat: no-repeat;
       background-size: 40px 20px;
       border: 0;
@@ -67,7 +67,7 @@
             <div class="head__inner">
               <div class="head__logo">
                 <a class="head__logo-link" href="#!">
-                  <img class="head__logo-img" src="../images/logo.svg" alt="logo">
+                  <img class="head__logo-img" src="images/logo.svg" alt="logo">
                 </a>
                 <div class="head__logo-item">
                   <h4 class="head__logo-title">Экологичные</h4>
@@ -89,13 +89,13 @@
 
               <div class="head__social">
                 <a class="head__social-link" href="viber://chat?number=89165562526">
-                  <img class="head__social-img" src="../images/social/Viber.svg" alt="viber">
+                  <img class="head__social-img" src="images/social/Viber.svg" alt="viber">
                 </a>
                 <a class="head__social-link" href="https://wa.me/89165562526">
-                  <img class="head__social-img" src="../images/social/whatsapp.svg" alt="whatsapp">
+                  <img class="head__social-img" src="images/social/whatsapp.svg" alt="whatsapp">
                 </a>
                 <a class="head__social-link" href="https://t.me/89165562526">
-                  <img class="head__social-img" src="../images/social/telegram.svg" alt="telegram">
+                  <img class="head__social-img" src="images/social/telegram.svg" alt="telegram">
                 </a>
               </div>
               <div class="head__info">
@@ -186,14 +186,14 @@
                   <form class="menu__search" action="#">
                     <input class="menu__search-input menu-1" type="search" autofocus tabindex="1">
                     <label class="menu__search-label">
-                      <img class="menu__img" src="../images/icons/search.svg" alt="search">
+                      <img class="menu__img" src="images/icons/search.svg" alt="search">
                       <input class="menu__link menu-1" type="submit" value="Поиск">
                     </label>
                   </form>
                 </li>
                 <li class="menu__item">
                   <a href="#!" class="menu__link menu-1">
-                    <img class="menu__img" src="../images/icons/unlock.svg" alt="unlock">
+                    <img class="menu__img" src="images/icons/unlock.svg" alt="unlock">
                     Личный кабинет
                   </a>
                 </li>
@@ -210,13 +210,13 @@
               </button>
               <div class="head__social">
                 <a class="head__social-link" href="viber://chat?number=89165562526">
-                  <img class="head__social-img" src="../images/social/Viber.svg" alt="viber">
+                  <img class="head__social-img" src="images/social/Viber.svg" alt="viber">
                 </a>
                 <a class="head__social-link" href="https://wa.me/89165562526">
-                  <img class="head__social-img" src="../images/social/whatsapp.svg" alt="whatsapp">
+                  <img class="head__social-img" src="images/social/whatsapp.svg" alt="whatsapp">
                 </a>
                 <a class="head__social-link" href="https://t.me/89165562526">
-                  <img class="head__social-img" src="../images/social/telegram.svg" alt="telegram">
+                  <img class="head__social-img" src="images/social/telegram.svg" alt="telegram">
                 </a>
               </div>
               <div class="head__info">
